k8s/order-service.yml
#Define deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: palanim/order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9005
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9005
            initialDelaySeconds: 120
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9005
            initialDelaySeconds: 120
            timeoutSeconds: 10
---

kind: Service
apiVersion: v1
metadata:
  name: orderservice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9005
      targetPort: 9005
      protocol: TCP
  selector:
    app: orderservice
