k8s/user-service.yml
#Define deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: palanim/user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9010
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9010
            initialDelaySeconds: 120
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9010
            initialDelaySeconds: 120
            timeoutSeconds: 10
---

kind: Service
apiVersion: v1
metadata:
  name: userservice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9010
      targetPort: 9010
      protocol: TCP
  selector:
    app: userservice
