k8s/destinationrule-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orderservice
spec:
  host: orderservice.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 4
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productservice
spec:
  host: productservice.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 4
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: userservice
spec:
  host: userservice.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 4
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s
